--- a/assets/css/main.less
+++ b/assets/css/main.less
@@ -1,7 +1,8 @@
+
 body{
     padding: 0;
     margin: 0;
-    background-color: var(--bg-color);
+    @apply min-h-screen bg-base/80 text-main/80;
 }
 *{
     padding: 0;
