--- a/assets/css/theme.less
+++ b/assets/css/theme.less
@@ -1,55 +1,33 @@
+/* 默认主题色，即 Light 日间主题颜色 */
+:root {
+  --color-highlight: 59 130 246;
+  --color-bg-base: 249 250 251;
+  --color-bg-nav: 243 244 246;
+  --color-text-main: 31 41 55;
+  --color-text-muted: 243 244 246;
+  --color-text-invert: 249 250 251;
+  --color-fill-main: 59 130 246;
+  --color-fill-muted: 191 219 254;
+}
 
-[data-theme="white"]{
-    --transparent00:rgba(0,0,0,0.0);
-    --transparent01:rgba(193,193,193,0.01);
-    --transparent02:rgba(0,0,0,0.02);
-    --transparent03:rgba(0,0,0,0.03);
-    --transparent05:rgba(0,0,0,0.05);
-    --transparent07:rgba(0,0,0,0.07);
-    --transparent09:rgba(0,0,0,0.09);
-    --transparent10:rgba(0,0,0,0.1);
-    --transparent20:rgba(0,0,0,0.2);
-    --transparent30:rgba(0,0,0,0.3);
-    --transparent40:rgba(0,0,0,0.4);
-    --transparent50:rgba(0,0,0,0.5);
-    --transparent70:rgba(0,0,0,0.7);
-    --transparent90:rgba(0,0,0,0.9);
-    --bg-color:#ffffff
-  }
-  
-  [data-theme="dark"]{
-    --transparent00:rgba(255,255,255,0.0);
-    --transparent01:rgba(255,255,255,0.01);
-    --transparent02:rgba(255,255,255,0.02);
-    --transparent03:rgba(255,255,255,0.03);
-    --transparent05:rgba(255,255,255,0.05);
-    --transparent07:rgba(255,255,255,0.07);
-    --transparent09:rgba(255,255,255,0.09);
-    --transparent10:rgba(255,255,255,0.1);
-    --transparent20:rgba(255,255,255,0.2);
-    --transparent30:rgba(255,255,255,0.3);
-    --transparent40:rgba(255,255,255,0.4);
-    --transparent50:rgba(255,255,255,0.5);
-    --transparent70:rgba(255,255,255,0.7);
-    --transparent90:rgba(255,255,255,0.9);
-    --bg-color:#000000
-  }
-  [data-theme="navy"]{
-    --transparent00:rgba(255,255,255,0.0);
-    --transparent01:rgba(255,255,255,0.01);
-    --transparent02:rgba(255,255,255,0.02);
-    --transparent03:rgba(255,255,255,0.03);
-    --transparent05:rgba(255,255,255,0.05);
-    --transparent07:rgba(255,255,255,0.07);
-    --transparent09:rgba(255,255,255,0.09);
-    --transparent10:rgba(255,255,255,0.1);
-    --transparent20:rgba(255,255,255,0.2);
-    --transparent30:rgba(255,255,255,0.3);
-    --transparent40:rgba(255,255,255,0.4);
-    --transparent50:rgba(255,255,255,0.5);
-    --transparent70:rgba(255,255,255,0.7);
-    --transparent90:rgba(255,255,255,0.9);
-    --bg-color:#000000
+.dark-theme {
+  --color-highlight: 37 99 235;
+  --color-bg-base: 75 85 99;
+  --color-bg-nav: 55 65 81;
+  --color-text-main: 245 245 244;
+  --color-text-muted: 250 250 249;
+  --color-text-invert: 245 245 244;
+  --color-fill-main: 37 99 235;
+  --color-fill-muted: 147 197 253;
+}
 
-  }
-  
+.tiger-theme {
+  --color-highlight: 245 158 11;
+  --color-bg: 249 250 251;
+  --color-bg-nav: 243 244 246;
+  --color-text-main: 31 41 55;
+  --color-text-muted: 252 211 77;
+  --color-text-invert: 254 252 232;
+  --color-fill-main: 251 113 133;
+  --color-fill-muted: 255 241 242;
+}
