--- a/assets/css/main.less
+++ b/assets/css/main.less
@@ -2,7 +2,7 @@
 body{
     padding: 0;
     margin: 0;
-    @apply min-h-screen bg-base/80 text-main/80;
+    @apply min-h-screen bg-base text-main;
 }
 *{
     padding: 0;
