--- a/assets/css/theme.less
+++ b/assets/css/theme.less
@@ -8,9 +8,34 @@
   --color-text-invert: 249 250 251;
   --color-fill-main: 59 130 246;
   --color-fill-muted: 191 219 254;
+  --transparent00:rgba(0,0,0,0);
+  --transparent01:rgba(0,0,0,0.01);
+  --transparent02:rgba(0,0,0,0.02);
+  --transparent03:rgba(0,0,0,0.03);
+  --transparent04:rgba(0,0,0,0.04);
+  --transparent05:rgba(0,0,0,0.05);
+  --transparent06:rgba(0,0,0,0.06);
+  --transparent07:rgba(0,0,0,0.07);
+  --transparent08:rgba(0,0,0,0.08);
+  --transparent09:rgba(0,0,0,0.09);
+  --transparent10:rgba(0,0,0,0.10);
+  --transparent20:rgba(0,0,0,0.20);
+  --transparent30:rgba(0,0,0,0.30);
+  --transparent40:rgba(0,0,0,0.40);
+  --transparent50:rgba(0,0,0,0.50);
+  --transparent60:rgba(0,0,0,0.60);
+  --transparent70:rgba(0,0,0,0.70);
+  --transparent80:rgba(0,0,0,0.80);
+  --transparent90:rgba(0,0,0,0.90);
+
+  --border-color:var(--transparent10);
+
+  --menu-width:64px;
+  --header-height: 40px;
+  --footer-height: 30px;
 }
 
-.dark-theme {
+html.dark {
   --color-highlight: 37 99 235;
   --color-bg-base: 2 6 23;
   --color-bg-nav: 55 65 81;
@@ -19,15 +44,28 @@
   --color-text-invert: 245 245 244;
   --color-fill-main: 37 99 235;
   --color-fill-muted: 147 197 253;
+  --transparent00:rgba(255,255,255,0);
+  --transparent01:rgba(255,255,255,0.01);
+  --transparent02:rgba(255,255,255,0.02);
+  --transparent03:rgba(255,255,255,0.03);
+  --transparent04:rgba(255,255,255,0.04);
+  --transparent05:rgba(255,255,255,0.05);
+  --transparent06:rgba(255,255,255,0.06);
+  --transparent07:rgba(255,255,255,0.07);
+  --transparent08:rgba(255,255,255,0.08);
+  --transparent09:rgba(255,255,255,0.09);
+  --transparent10:rgba(255,255,255,0.10);
+  --transparent20:rgba(255,255,255,0.20);
+  --transparent30:rgba(255,255,255,0.30);
+  --transparent40:rgba(255,255,255,0.40);
+  --transparent50:rgba(255,255,255,0.50);
+  --transparent60:rgba(255,255,255,0.60);
+  --transparent70:rgba(255,255,255,0.70);
+  --transparent80:rgba(255,255,255,0.80);
+  --transparent90:rgba(255,255,255,0.90);
+
+  --border-color:var(--transparent10);
+  
 }
 
-.tiger-theme {
-  --color-highlight: 245 158 11;
-  --color-bg: 249 250 251;
-  --color-bg-nav: 243 244 246;
-  --color-text-main: 31 41 55;
-  --color-text-muted: 252 211 77;
-  --color-text-invert: 254 252 232;
-  --color-fill-main: 251 113 133;
-  --color-fill-muted: 255 241 242;
-}
+@import 'element.less';
