--- a/assets/css/theme.less
+++ b/assets/css/theme.less
@@ -1,5 +1,5 @@
 /* 默认主题色，即 Light 日间主题颜色 */
-:root {
+html:root {
   --color-highlight: 59 130 246;
   --color-bg-base: 249 250 251;
   --color-bg-nav: 243 244 246;
@@ -30,7 +30,7 @@
 
   --border-color:var(--transparent10);
 
-  --menu-width:64px;
+  --menu-width:44px;
   --header-height: 40px;
   --footer-height: 30px;
 }
