--- a/assets/css/main.less
+++ b/assets/css/main.less
@@ -1,11 +1,20 @@
-
+@font-face {
+    font-family: "Roboto";
+    src: url("/font/Roboto/Roboto-Regular.ttf");
+    font-display: swap;
+    font-smooth: antialiased;
+    /* unicode-range: U+30-39; */
+  }
+  
 body{
     padding: 0;
     margin: 0;
     @apply min-h-screen bg-base text-main;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 *{
     padding: 0;
     margin: 0;
     box-sizing: border-box;
 }
+
