--- a/assets/css/element.less
+++ b/assets/css/element.less
@@ -1,8 +1,10 @@
 
 html:root {
     --el-menu-base-level-padding:10px;
+    --el-color-primary:rgba(0 193 106 / 1);
 }
 html.dark{
+    --el-color-primary:rgba(0 220 130 / 1);
     // el-menu
     --el-menu-active-color: var(--el-color-primary);
     --el-menu-text-color: #fff;
