--- a/assets/css/theme.less
+++ b/assets/css/theme.less
@@ -8,6 +8,7 @@ html:root {
   --color-text-invert: 249 250 251;
   --color-fill-main: 59 130 246;
   --color-fill-muted: 191 219 254;
+  --color-primary-default:0 193 106;
   --transparent00:rgba(0,0,0,0);
   --transparent01:rgba(0,0,0,0.01);
   --transparent02:rgba(0,0,0,0.02);
@@ -33,6 +34,7 @@ html:root {
   --menu-width:44px;
   --header-height: 40px;
   --footer-height: 30px;
+  --status-bar-height:20px;
 }
 
 html.dark {
@@ -44,6 +46,7 @@ html.dark {
   --color-text-invert: 245 245 244;
   --color-fill-main: 37 99 235;
   --color-fill-muted: 147 197 253;
+  --color-primary-default:0 220 130;
   --transparent00:rgba(255,255,255,0);
   --transparent01:rgba(255,255,255,0.01);
   --transparent02:rgba(255,255,255,0.02);
