--- a/assets/css/theme.less
+++ b/assets/css/theme.less
@@ -4,11 +4,13 @@ html:root {
   --color-bg-base: 249 250 251;
   --color-bg-nav: 243 244 246;
   --color-text-main: 31 41 55;
-  --color-text-muted: 243 244 246;
+  --color-text-muted: 81 91 110;
   --color-text-invert: 249 250 251;
   --color-fill-main: 59 130 246;
   --color-fill-muted: 191 219 254;
   --color-primary-default:0 193 106;
+  --color-green:0 193 106;
+  --color-red:245 70 92;
   --transparent00:rgba(0,0,0,0);
   --transparent01:rgba(0,0,0,0.01);
   --transparent02:rgba(0,0,0,0.02);
@@ -42,11 +44,13 @@ html.dark {
   --color-bg-base: 2 6 23;
   --color-bg-nav: 55 65 81;
   --color-text-main: 245 245 244;
-  --color-text-muted: 250 250 249;
-  --color-text-invert: 245 245 244;
+  --color-text-muted: 143 144 154;
+  --color-text-invert: 0 0 0;
   --color-fill-main: 37 99 235;
   --color-fill-muted: 147 197 253;
   --color-primary-default:0 220 130;
+  --color-green:0 220 130;
+  --color-red:245 70 92;
   --transparent00:rgba(255,255,255,0);
   --transparent01:rgba(255,255,255,0.01);
   --transparent02:rgba(255,255,255,0.02);
