--- a/assets/css/element.less
+++ b/assets/css/element.less
@@ -1,36 +1,55 @@
-
 html:root {
-    --el-menu-base-level-padding:10px;
-    --el-color-primary:rgba(0 193 106 / 1);
+    --el-menu-base-level-padding: 10px;
+    --el-color-primary: rgba(0 193 106 / 1);
 }
-html.dark{
-    --el-color-primary:rgba(0 220 130 / 1);
+
+html.dark {
+    --el-color-primary: rgba(0 220 130 / 1);
     // el-menu
     --el-menu-active-color: var(--el-color-primary);
     --el-menu-text-color: #fff;
     --el-menu-hover-text-color: var(--el-color-primary);
-    --el-menu-bg-color:var(--transparent05);
+    --el-menu-bg-color: var(--transparent05);
     --el-menu-hover-bg-color: var(--transparent10);
     --el-menu-item-font-size: var(--el-font-size-base);
     --el-menu-item-hover-fill: var(--el-color-primary-light-9);
     --el-menu-border-color: var(--transparent10);
-    
-    --el-bg-color-overlay:var(--transparent10);
-    --el-border-color-light:var(--transparent10);
 
-    --el-switch-off-color:var(--el-menu-bg-color);
+    --el-bg-color-overlay: var(--transparent10);
+    --el-border-color-light: var(--transparent10);
+
+    --el-switch-off-color: var(--el-menu-bg-color);
+
+    --el-fill-color-blank: var(--transparent05);
+    --el-text-color-regular: rgb(var(--color-text-muted));
+    --el-bg-color-overlay: rgb(var(--color-bg-base));
+    --el-fill-color-light: var(--transparent10);
 }
 
-body 
-{
+body {
     .el-switch {
         --el-switch-on-color: var(--el-color-primary);
         --el-switch-off-color: var(--transparent10);
     }
-    .el-switch.is-checked .el-switch__core .el-switch__action{
+
+    .el-switch.is-checked .el-switch__core .el-switch__action {
         background-color: var(--el-color-white);
     }
-    .el-switch__core .el-switch__action{
+
+    .el-switch__core .el-switch__action {
         background-color: var(--transparent50);
+    }
+
+    .el-select {
+        .el-select__wrapper {
+            box-shadow: none;
+        }
+        .el-select__wrapper:hover {
+            box-shadow: 0 0 0 1px var(--transparent10) inset
+        }
+
+        .el-select__wrapper.is-hovering:not(.is-focused) {
+            box-shadow: 0 0 0 1px var(--transparent10) inset
+        }
     }
 }
