品种搜索列表开始

--- a/assets/css/element.less
+++ b/assets/css/element.less
@@ -52,4 +52,8 @@ body {
             box-shadow: 0 0 0 1px var(--transparent10) inset
         }
     }
+
+    .el-drawer__header{
+        margin-bottom: 0;
+    }
 }
