--- a/assets/css/theme.less
+++ b/assets/css/theme.less
@@ -4,6 +4,7 @@ html:root {
   --color-bg-base: 255 255 255;
   --color-bg-nav: 243 244 246;
   --color-text-main: 31 41 55;
+  --color-text-grey: 150 150 150;
   --color-text-muted: 81 91 110;
   --color-text-invert: 249 250 251;
   --color-fill-main: 59 130 246;
@@ -44,6 +45,7 @@ html.dark {
   --color-bg-base: 2 6 23;
   --color-bg-nav: 55 65 81;
   --color-text-main: 245 245 244;
+  --color-text-grey: 66 41 55;
   --color-text-muted: 143 144 154;
   --color-text-invert: 0 0 0;
   --color-fill-main: 37 99 235;
