--- a/assets/css/element.less
+++ b/assets/css/element.less
@@ -60,4 +60,9 @@ body {
     .el-drawer__body{
         padding: 0;
     }
+
+    .el-skeleton {
+        --el-skeleton-color: var(--transparent10);
+        --el-skeleton-to-color: var(--transparent20);
+    }
 }
