--- a/assets/css/theme.less
+++ b/assets/css/theme.less
@@ -12,6 +12,7 @@ html:root {
   --color-primary-default:0 193 106;
   --color-green:0 193 106;
   --color-red:245 70 92;
+  --color-yellow:255 199 49;
   --transparent00:rgba(0,0,0,0);
   --transparent01:rgba(0,0,0,0.01);
   --transparent02:rgba(0,0,0,0.02);
@@ -53,6 +54,7 @@ html.dark {
   --color-primary-default:0 220 130;
   --color-green:45 189 133;
   --color-red:245 70 92;
+  --color-yellow:255 199 49;
   --transparent00:rgba(255,255,255,0);
   --transparent01:rgba(255,255,255,0.01);
   --transparent02:rgba(255,255,255,0.02);
