--- a/assets/css/main.less
+++ b/assets/css/main.less
@@ -10,7 +10,7 @@ body{
     padding: 0;
     margin: 0;
     @apply min-h-screen bg-base text-main;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif,monospace;
 }
 *{
     padding: 0;
