--- a/assets/css/main.less
+++ b/assets/css/main.less
@@ -11,6 +11,7 @@ body{
     margin: 0;
     @apply min-h-screen bg-base text-main;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif,monospace;
+    font-variant-numeric: tabular-nums; /* 可选，使数字等宽对齐更整齐 */
 }
 *{
     padding: 0;
