--- a/assets/css/element.less
+++ b/assets/css/element.less
@@ -30,6 +30,8 @@ html:root {
     --el-color-primary-light-7: rgb(65, 204, 142);
     --el-color-primary-light-8: rgb(110, 202, 161);
     --el-color-primary-light-9: rgb(164, 206, 187);
+
+    --el-border-color-extra-light: var(--transparent05);
 }
 
 html.dark {
@@ -108,6 +110,12 @@ body {
                     border: 1px solid var(--transparent10);
                 }
             }
+        }
+    }
+    .el-radio-button {
+        .el-radio-button__inner{
+            font-size: 12px;
+            padding: 3px 8px;
         }
     }
     
