--- a/assets/css/element.less
+++ b/assets/css/element.less
@@ -1,6 +1,6 @@
 html:root {
     --el-menu-base-level-padding: 10px;
-    --el-color-primary: rgba(0 193 106 / 1);
+    --el-color-primary: rgb(var(--color-green));
     // el-menu
     --el-menu-active-color: var(--el-color-primary);
     --el-menu-text-color: rgb(var(--color-main));
@@ -32,11 +32,6 @@ html:root {
     --el-color-primary-light-9: rgb(164, 206, 187);
 
     --el-border-color-extra-light: var(--transparent05);
-}
-
-html.dark {
-    --el-color-primary: rgba(0 220 130 / 1);
-    
 }
 
 body {
