--- a/assets/css/element.less
+++ b/assets/css/element.less
@@ -30,8 +30,12 @@ html:root {
     --el-color-primary-light-7: rgb(65, 204, 142);
     --el-color-primary-light-8: rgb(110, 202, 161);
     --el-color-primary-light-9: rgb(164, 206, 187);
+    --el-color-primary-dark-2: var(--el-color-primary);
 
     --el-border-color-extra-light: var(--transparent05);
+
+    --el-button-active-bg-color:var(--el-color-primary);
+    --el-button-active-border-color:var(--el-color-primary);
 }
 
 body {
