--- a/assets/css/element.less
+++ b/assets/css/element.less
@@ -40,9 +40,10 @@ html:root {
 
 body {
     .el-input {
-        --el-input-border-color: var(--transparent10);
-        --el-input-border-color-hover: var(--transparent20);
+        --el-input-border-color: var(--transparent05);
+        --el-input-border-color-hover: var(--transparent10);
         --el-input-text-color:rgb(var(--color-text-main));
+        --el-input-hover-border-color:var(--transparent30);
         
     }
     .el-input-number .el-input__inner{
@@ -151,6 +152,10 @@ body {
                 }
             }
         }
+    }
+
+    .el-popover{
+        --el-popover-border-color:var(--transparent10);
     }
     
 }
