布局收缩优化

--- a/assets/css/element.less
+++ b/assets/css/element.less
@@ -157,5 +157,20 @@ body {
     .el-popover{
         --el-popover-border-color:var(--transparent20);
     }
-    
+    .el-empty {
+        --el-empty-padding: 40px 0;
+        --el-empty-image-width: 160px;
+        --el-empty-description-margin-top: 20px;
+        --el-empty-bottom-margin-top: 20px;
+        --el-empty-fill-color-0: rgb(var(--color-bg-base));
+        --el-empty-fill-color-1: var(--transparent10);
+        --el-empty-fill-color-2: var(--transparent10);
+        --el-empty-fill-color-3: var(--transparent10);
+        --el-empty-fill-color-4: var(--transparent10);
+        --el-empty-fill-color-5: var(--transparent10);
+        --el-empty-fill-color-6: var(--transparent10);
+        --el-empty-fill-color-7: var(--transparent10);
+        --el-empty-fill-color-8: var(--transparent10);
+        --el-empty-fill-color-9: var(--transparent10);
+    }
 }
