--- a/assets/css/global.less
+++ b/assets/css/global.less
@@ -1,3 +1,9 @@
+html,body{
+    height: var(--body-height);
+    width: var(--body-width);
+    margin: 0;
+    padding: 0;
+}
 .wrapper {
     container-type: inline-size;
 }
