--- a/assets/css/global.less
+++ b/assets/css/global.less
@@ -3,6 +3,7 @@ html,body{
     width: var(--body-width);
     margin: 0;
     padding: 0;
+    overflow: hidden;
 }
 .wrapper {
     container-type: inline-size;
@@ -17,11 +18,12 @@ html,body{
     font-size: 12px;
     &:hover {
         background-color: var(--transparent08);
+        border: 1px solid var(--transparent10);
         color: var(--color-text-main);
     }
 }
 
-.bt-primary {
+.bt-green,.bt-primary {
     background-color: rgb(var(--color-green));
     border: 1px solid rgb(var(--color-green));
     color: white;
@@ -30,5 +32,17 @@ html,body{
     font-size: 12px;
     &:hover {
         background-color: rgb(var(--color-green)/0.9);
+    }
+}
+
+.bt-red {
+    background-color: rgb(var(--color-red));
+    border: 1px solid rgb(var(--color-red));
+    color: white;
+    padding: 4px 12px;
+    border-radius: 3px;
+    font-size: 12px;
+    &:hover {
+        background-color: rgb(var(--color-red)/0.9);
     }
 }
