按钮优化样式

--- a/assets/css/global.less
+++ b/assets/css/global.less
@@ -10,6 +10,9 @@ html,body{
 }
 
 .bt-default {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     background-color: var(--transparent05);
     border: 1px solid var(--transparent05);
     color: var(--color-text-main);
@@ -24,6 +27,9 @@ html,body{
 }
 
 .bt-green,.bt-primary {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     background-color: rgb(var(--color-green));
     border: 1px solid rgb(var(--color-green));
     color: white;
@@ -36,6 +42,9 @@ html,body{
 }
 
 .bt-red {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     background-color: rgb(var(--color-red));
     border: 1px solid rgb(var(--color-red));
     color: white;
