--- a/assets/css/global.less
+++ b/assets/css/global.less
@@ -5,6 +5,13 @@ html,body{
     padding: 0;
     overflow: hidden;
 }
+#__nuxt{
+    height: var(--body-height);
+    width: var(--body-width);
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+}
 .wrapper {
     container-type: inline-size;
 }
