--- a/assets/css/main.less
+++ b/assets/css/main.less
@@ -9,7 +9,7 @@
 body{
     padding: 0;
     margin: 0;
-    @apply min-h-screen bg-base text-main;
+    @apply bg-base text-main;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif,monospace;
     font-variant-numeric: tabular-nums; /* 可选，使数字等宽对齐更整齐 */
 }
