--- a/assets/css/main.less
+++ b/assets/css/main.less
@@ -18,4 +18,21 @@ body{
     margin: 0;
     box-sizing: border-box;
 }
+html,body{
+    height: var(--body-height);
+    width: var(--body-width);
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+}
+#__nuxt{
+    height: var(--body-height);
+    width: var(--body-width);
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+}
+.wrapper {
+    container-type: inline-size;
+}
 
