--- a/assets/css/element.less
+++ b/assets/css/element.less
@@ -19,6 +19,7 @@ html:root {
 
     --el-fill-color-blank: var(--transparent05);
     --el-text-color-regular: rgb(var(--color-text-muted));
+    --el-text-color-primary:rgb(var(--color-text-main));
     --el-bg-color-overlay: rgb(var(--color-bg-base));
     --el-fill-color-light: var(--transparent10);
 
@@ -172,5 +173,54 @@ body {
         --el-empty-fill-color-7: var(--transparent10);
         --el-empty-fill-color-8: var(--transparent10);
         --el-empty-fill-color-9: var(--transparent10);
+    }
+
+    .el-dialog{
+        --el-dialog-bg-color: rgb(var(--color-bg-base));
+        --el-dialog-box-shadow: var(--el-box-shadow);
+        --el-dialog-title-font-size: var(--el-font-size-large);
+        --el-dialog-content-font-size: 14px;
+        --el-dialog-font-line-height: var(--el-font-line-height-primary);
+        --el-dialog-padding-primary: 0;
+        --el-dialog-border-radius: 6px;
+        --el-overlay-color-lighter:rgb(0,0,0,0.5);
+        overflow: hidden;
+        border: 1px solid var(--transparent10);
+        .el-dialog__header{
+            background-color: var(--transparent10);
+            padding: 16px;
+            display: flex;
+            align-items: center;
+            position: relative;
+            &::before {
+                // background-image: linear-gradient(90deg, #00dc82, #36e4da, #0047e1);
+                background-image: linear-gradient(90deg, #1e6f4d, #309993, #112d6b);
+                filter: blur(60px);
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                content: '';
+                z-index: 0;
+                opacity: 0.6;
+                // transition: all 0.3s ease;
+            }
+            .el-dialog__title{
+                display: flex;
+                line-height: 1;
+                font-size: 16px;
+            }
+            .el-dialog__headerbtn{
+                height: 38px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+            }
+        }
+        .el-dialog__body{
+            background-color: var(--transparent05);
+        }
+        
     }
 }
