--- a/assets/css/global.less
+++ b/assets/css/global.less
@@ -44,3 +44,21 @@
         background-color: rgb(var(--color-red)/0.9);
     }
 }
+
+.glass {
+    position: relative;
+    &::before {
+        // background-image: linear-gradient(90deg, #00dc82, #36e4da, #0047e1);
+        background-image: linear-gradient(90deg, #1e6f4d, #309993, #112d6b);
+        filter: blur(60px);
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        content: '';
+        z-index: -1;
+        opacity: 0.6;
+        // transition: all 0.3s ease;
+    }
+}
