优化代币配置界面

--- a/assets/css/element.less
+++ b/assets/css/element.less
@@ -228,4 +228,26 @@ body {
             font-size: 10px;
 		}
 	}
+
+    .el-progress{
+        .el-progress-bar{
+            .el-progress-bar__outer{
+                background-color: var(--transparent20);
+                .el-progress-bar__inner{
+                    .el-progress-bar__innerText{
+                        font-size: 8px;
+                        display: flex;
+                        align-items: center;
+                        height: 100%;
+                        justify-content: flex-end;
+                        overflow: hidden;
+                        color: #000;
+                    }
+                }
+            }
+        }
+        .el-progress__text{
+            font-size: 10px!important;
+        }
+    }
 }
