--- a/assets/css/main.less
+++ b/assets/css/main.less
@@ -1,38 +1,48 @@
 @font-face {
-    font-family: "Roboto";
-    src: url("/css/font/Roboto/Roboto-Regular.ttf");
-    font-display: swap;
-    font-smooth: antialiased;
-    /* unicode-range: U+30-39; */
-  }
-  
-body{
-    padding: 0;
-    margin: 0;
-    @apply bg-base text-main;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif,monospace;
-    font-variant-numeric: tabular-nums; /* 可选，使数字等宽对齐更整齐 */
-}
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-}
-html,body{
-    height: var(--body-height);
-    width: var(--body-width);
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-}
-#__nuxt{
-    height: var(--body-height);
-    width: var(--body-width);
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-}
-.wrapper {
-    container-type: inline-size;
+	font-family: 'Roboto';
+	src: url('/css/font/Roboto/Roboto-Regular.ttf');
+	font-display: swap;
+	font-smooth: antialiased;
+	/* unicode-range: U+30-39; */
 }
 
+body {
+	padding: 0;
+	margin: 0;
+	@apply bg-base text-main;
+	font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif, monospace;
+	font-variant-numeric: tabular-nums; /* 可选，使数字等宽对齐更整齐 */
+}
+* {
+	padding: 0;
+	margin: 0;
+	box-sizing: border-box;
+}
+html,
+body {
+	height: var(--body-height);
+	width: var(--body-width);
+	margin: 0;
+	padding: 0;
+	overflow: hidden;
+}
+#__nuxt {
+	height: var(--body-height);
+	width: var(--body-width);
+	margin: 0;
+	padding: 0;
+	overflow: hidden;
+}
+.wrapper {
+	container-type: inline-size;
+}
+
+@media (max-width:800px) {
+	body {
+		user-select: none; /* 禁止选中文本 */
+		-webkit-user-select: none; /* Safari/Chrome */
+		-ms-user-select: none; /* IE10+ */
+		-moz-user-select: none; /* Firefox */
+		-webkit-touch-callout: none; /* iOS 长按弹出菜单 */
+	}
+}
