--- a/assets/css/element.less
+++ b/assets/css/element.less
@@ -224,30 +224,43 @@ body {
 
 	.el-radio-button--small {
 		.el-radio-button__inner {
-            padding: 4px 6px;
-            font-size: 10px;
+			padding: 4px 6px;
+			font-size: 10px;
 		}
 	}
 
-    .el-progress{
-        .el-progress-bar{
-            .el-progress-bar__outer{
-                background-color: var(--transparent20);
-                .el-progress-bar__inner{
-                    .el-progress-bar__innerText{
-                        font-size: 8px;
-                        display: flex;
-                        align-items: center;
-                        height: 100%;
-                        justify-content: flex-end;
-                        overflow: hidden;
-                        color: #000;
-                    }
-                }
-            }
-        }
-        .el-progress__text{
-            font-size: 10px!important;
-        }
-    }
+	.el-progress {
+		.el-progress-bar {
+			.el-progress-bar__outer {
+				background-color: var(--transparent20);
+				.el-progress-bar__inner {
+					.el-progress-bar__innerText {
+						font-size: 8px;
+						display: flex;
+						align-items: center;
+						height: 100%;
+						justify-content: flex-end;
+						overflow: hidden;
+						color: #000;
+					}
+				}
+			}
+		}
+		.el-progress__text {
+			font-size: 10px !important;
+		}
+	}
+
+	.el-drawer {
+		--el-drawer-bg-color: rgb(var(--color-bg-base));
+		--el-drawer-padding-primary: var(--el-dialog-padding-primary, 20px);
+		background-color: var(--el-drawer-bg-color);
+		box-shadow: var(--el-box-shadow-dark);
+		box-sizing: border-box;
+		display: flex;
+		flex-direction: column;
+		overflow: hidden;
+		position: absolute;
+		transition: all var(--el-transition-duration);
+	}
 }
