--- a/assets/css/theme.less
+++ b/assets/css/theme.less
@@ -43,6 +43,7 @@ html:root {
   --header-height: 40px;
   --footer-height: 40px;
   --status-bar-height:30px;
+  --nav-height:50px;
 }
 
 html.dark {
