--- a/assets/css/main.less
+++ b/assets/css/main.less
@@ -5,13 +5,23 @@
 	font-smooth: antialiased;
 	/* unicode-range: U+30-39; */
 }
+@font-face {
+	font-family: 'Roboto-Bold';
+	src: url('/css/font/Roboto/Roboto-Bold.ttf');
+	font-display: swap;
+	font-smooth: antialiased;
+	/* unicode-range: U+30-39; */
+}
 
 body {
 	padding: 0;
 	margin: 0;
 	@apply bg-base text-main;
-	font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif, monospace;
+	font-family: Roboto,system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif, monospace;
 	font-variant-numeric: tabular-nums; /* 可选，使数字等宽对齐更整齐 */
+}
+.roboto-bold{
+	font-family: Roboto-Bold;
 }
 * {
 	padding: 0;
