--- a/assets/css/main.less
+++ b/assets/css/main.less
@@ -17,7 +17,8 @@ body {
 	padding: 0;
 	margin: 0;
 	@apply bg-base text-main;
-	font-family: Roboto,system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif, monospace;
+	// font-family: system-ui,Roboto, -apple-system, BlinkMacSystemFont, 'Segoe UI', Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif, monospace;
+	font-family: 'PingFang SC', 'Roboto', 'Segoe UI', sans-serif;
 	font-variant-numeric: tabular-nums; /* 可选，使数字等宽对齐更整齐 */
 }
 .roboto-bold{
