--- a/assets/css/element.less
+++ b/assets/css/element.less
@@ -264,4 +264,10 @@ body {
 		transition: all var(--el-transition-duration);
 		overflow: hidden;
 	}
+
+	.el-scrollbar{
+		.el-scrollbar__wrap{
+			overflow-y: scroll;
+		}
+	}
 }
