--- a/assets/css/theme.less
+++ b/assets/css/theme.less
@@ -3,10 +3,12 @@ html:root {
   --color-highlight: 59 130 246;
   --color-bg-base: 255 255 255;
   --color-bg-nav: 242 242 242;
+  --color-bg-brand:204 16 176;
   --color-text-main: 31 41 55;
   --color-text-grey: 150 150 150;
   --color-text-muted: 81 91 110;
   --color-text-invert: 249 250 251;
+  --color-text-brand:204 16 176;
   --color-fill-main: 59 130 246;
   --color-fill-muted: 191 219 254;
   --color-primary-default:0 193 106;
@@ -14,6 +16,7 @@ html:root {
   --color-red:245 70 92;
   --color-yellow:255 199 49;
   --color-grey: 150 150 150;
+  --color-brand:204 16 176;
   --transparent00:rgba(0,0,0,0);
   --transparent01:rgba(0,0,0,0.01);
   --transparent02:rgba(0,0,0,0.02);
@@ -33,8 +36,13 @@ html:root {
   --transparent70:rgba(0,0,0,0.70);
   --transparent80:rgba(0,0,0,0.80);
   --transparent90:rgba(0,0,0,0.90);
+  --transparent100:rgba(0,0,0,1.0);
 
   --border-color:var(--transparent10);
+
+  --brand-color:rgb(var(--color-brand));
+  --bg-linear-180:linear-gradient(180deg, #cc10b0, #52247f, #112d6b);
+  --bg-linear-90:linear-gradient(90deg, #cc10b0, #52247f, #112d6b)
 
   --body-height:100vh;
   --body-width:100vw;
@@ -54,17 +62,20 @@ html.dark {
   --color-highlight: 37 99 235;
   --color-bg-base: 2 6 23;
   --color-bg-nav: 16 19 34;
+  --color-bg-brand:204 16 176;
   --color-text-main: 245 245 244;
   --color-text-grey: 131 134 146;
   --color-text-muted: 131 134 146;
   --color-text-invert: 0 0 0;
+  --color-text-brand:204 16 176;
   --color-fill-main: 37 99 235;
   --color-fill-muted: 147 197 253;
   --color-primary-default:0 220 130;
   --color-green:45 189 133;
-  --color-red:245 70 92;
+  --color-red:245 70 130;
   --color-yellow:255 199 49;
   --color-grey: 165 165 165;
+  --color-brand:204 16 176;
   --transparent00:rgba(255,255,255,0);
   --transparent01:rgba(255,255,255,0.01);
   --transparent02:rgba(255,255,255,0.02);
@@ -84,8 +95,13 @@ html.dark {
   --transparent70:rgba(255,255,255,0.70);
   --transparent80:rgba(255,255,255,0.80);
   --transparent90:rgba(255,255,255,0.90);
+  --transparent100:rgba(255,255,255,1.0);
 
   --border-color:var(--transparent10);
+
+  --brand-color:rgb(var(--color-brand));
+  --bg-linear-180:linear-gradient(180deg, #cc10b0, #52247f, #112d6b);
+  --bg-linear-90:linear-gradient(90deg, #cc10b0, #52247f, #112d6b)
   
 }
 
