白色主题优化

--- a/assets/css/theme.less
+++ b/assets/css/theme.less
@@ -41,8 +41,8 @@ html:root {
   --border-color:var(--transparent10);
 
   --brand-color:rgb(var(--color-brand));
-  --bg-linear-180:linear-gradient(180deg, #cc10b0, #52247f, #112d6b);
-  --bg-linear-90:linear-gradient(90deg, #cc10b0, #52247f, #112d6b)
+  --bg-linear-180:linear-gradient(180deg, #ffdffa, #ebd6ff, #d5e2ff);
+  --bg-linear-90:linear-gradient(90deg, #ffdffa, #ebd6ff, #d5e2ff);
 
   --body-height:100vh;
   --body-width:100vw;
