--- a/assets/css/main.less
+++ b/assets/css/main.less
@@ -3,14 +3,14 @@
 	src: url('/css/font/Roboto/Roboto-Regular.ttf');
 	font-display: swap;
 	font-smooth: antialiased;
-	/* unicode-range: U+30-39; */
+	unicode-range: U+30-39, U+002E; /* 数字 0-9 和小数点 */
 }
 @font-face {
 	font-family: 'Roboto-Bold';
 	src: url('/css/font/Roboto/Roboto-Bold.ttf');
 	font-display: swap;
 	font-smooth: antialiased;
-	/* unicode-range: U+30-39; */
+	// unicode-range: U+30-39, U+002E; /* 数字 0-9 和小数点 */
 }
 
 body {
