--- a/assets/css/element.less
+++ b/assets/css/element.less
@@ -295,6 +295,7 @@ body {
 		}
 		.el-dialog__body {
 			background-color: var(--transparent05);
+			
 		}
 	}
 
@@ -361,6 +362,9 @@ body {
 			content: '';
 			z-index: 0;
 			opacity: 0.15;
+		}
+		.el-drawer__body{
+			overflow: hidden;
 		}
 	}
 
