--- a/assets/css/element.less
+++ b/assets/css/element.less
@@ -338,15 +338,13 @@ body {
 	}
 
 	.el-overlay {
-		&.el-drawer-fade-enter-active:not(.pushup) {
-			border-left: 1px solid var(--transparent05);
-			transform: translateX(0);
-			background: transparent;
-		}
+		// &.el-drawer-fade-enter-active:not(.pushup) {
+		// 	transform: translateX(0);
+		// }
 
-		&.el-drawer-fade-leave-to .rtl{
-			transform: translateX(100%);
-		}
+		// &.el-drawer-fade-leave-to .rtl{
+		// 	transform: translateX(100%);
+		// }
 		&.el-drawer-fade-enter-from, &.el-drawer-fade-leave-to{
 			opacity: 1;
 		}
