--- a/assets/css/element.less
+++ b/assets/css/element.less
@@ -353,7 +353,7 @@ body {
 
 	.push-btt{
 		.el-overlay{
-			background-color: var(--el-overlay-color-lighter);
+			// background-color: var(--el-overlay-color-lighter);
 		}
 	}
 
