--- a/assets/css/theme.less
+++ b/assets/css/theme.less
@@ -4,6 +4,8 @@ html:root {
   --color-bg-base: 255 255 255;
   --color-bg-nav: 242 242 242;
   --color-bg-brand:204 16 176;
+  --color-bg-invert:255 255 255;
+  --color-bg-mask:255 255 255;
   --color-text-main: 31 41 55;
   --color-text-grey: 150 150 150;
   --color-text-muted: 81 91 110;
@@ -63,6 +65,8 @@ html.dark {
   --color-bg-base: 2 6 23;
   --color-bg-nav: 16 19 34;
   --color-bg-brand:204 16 176;
+  --color-bg-invert:255 255 255;
+  --color-bg-mask:0 0 0;
   --color-text-main: 245 245 244;
   --color-text-grey: 131 134 146;
   --color-text-muted: 131 134 146;
