--- a/assets/css/element.less
+++ b/assets/css/element.less
@@ -349,7 +349,7 @@ body {
 	}
 
 	.el-overlay {
-		animation: bgmask 2s forwards;
+		animation: bgmask .3s forwards;
 		background-color: transparent;
 		// &.el-drawer-fade-enter-active:not(.pushup) {
 		// 	background-color: transparent;
@@ -357,7 +357,7 @@ body {
 
 		&.el-drawer-fade-leave-to{
 			background-color: var(--el-overlay-color-lighter);
-			animation: bgmask 2s reverse forwards;
+			animation: bgmask .3s reverse forwards;
 		}
 		&.el-drawer-fade-enter-from, &.el-drawer-fade-leave-to{
 			opacity: 1;
