--- a/assets/css/element.less
+++ b/assets/css/element.less
@@ -349,7 +349,7 @@ body {
 	}
 
 	.el-overlay {
-		animation: bgmask .3s forwards;
+		animation: bgmask 2s forwards;
 		background-color: transparent;
 		// &.el-drawer-fade-enter-active:not(.pushup) {
 		// 	background-color: transparent;
