touch scroll 冲突问题

--- a/assets/css/element.less
+++ b/assets/css/element.less
@@ -350,7 +350,7 @@ body {
 
 	.el-overlay {
 		
-		background-color: transparent;
+		background-color: var(--el-overlay-color-lighter);
 		&.el-drawer-fade-enter-active {
 			background-color: transparent;
 			animation: bgmask 2s forwards;
