--- a/assets/css/main.less
+++ b/assets/css/main.less
@@ -1,13 +1,13 @@
 @font-face {
 	font-family: 'Roboto';
-	src: url('/css/font/Roboto/Roboto-Regular.ttf');
+	src: url('/css/font/Roboto/Roboto-Regular.ttf') format('truetype');
 	font-display: swap;
 	font-smooth: antialiased;
 	unicode-range: U+30-39, U+002E; /* 数字 0-9 和小数点 */
 }
 @font-face {
 	font-family: 'Roboto-Bold';
-	src: url('/css/font/Roboto/Roboto-Bold.ttf');
+	src: url('/css/font/Roboto/Roboto-Bold.ttf') format('truetype');
 	font-display: swap;
 	font-smooth: antialiased;
 	// unicode-range: U+30-39, U+002E; /* 数字 0-9 和小数点 */
