移动端屏幕适配

--- a/assets/css/theme.less
+++ b/assets/css/theme.less
@@ -58,6 +58,9 @@ html:root {
 	--safe-top: env(safe-area-inset-top);
 	--safe-bottom: constant(safe-area-inset-bottom);
 	--safe-bottom: env(safe-area-inset-bottom);
+
+  --font-size-base: 37.5;
+  --font-size:0.3733rem
 }
 
 html.dark {
