动画首次卡顿问题

--- a/assets/css/main.less
+++ b/assets/css/main.less
@@ -38,6 +38,7 @@ body {
 	overflow: hidden;
 }
 #__nuxt {
+	will-change: transform, opacity;
 	height: var(--body-height);
 	width: var(--body-width);
 	margin: 0;
