--- a/assets/css/main.less
+++ b/assets/css/main.less
@@ -44,7 +44,7 @@ body {
 	margin: 0;
 	padding: 0;
 	overflow: hidden;
-	transition: transform 0.3s;
+	transition: all 0.4s ease;
 }
 .wrapper {
 	container-type: inline-size;
