--- a/assets/css/main.less
+++ b/assets/css/main.less
@@ -44,7 +44,7 @@ body {
 	margin: 0;
 	padding: 0;
 	overflow: hidden;
-	transition: all 0.4s ease;
+	transition: all 0.3s cubic-bezier(0.09, 0.83, 0.79, 0.99);
 }
 .wrapper {
 	container-type: inline-size;
