--- a/assets/css/main.less
+++ b/assets/css/main.less
@@ -36,6 +36,7 @@ body {
 	margin: 0;
 	padding: 0;
 	overflow: hidden;
+	overscroll-behavior: contain;
 }
 #__nuxt {
 	will-change: transform, opacity;
