--- a/assets/css/theme.less
+++ b/assets/css/theme.less
@@ -60,7 +60,9 @@ html:root {
 	--safe-bottom: env(safe-area-inset-bottom);
 
   --font-size-base: 37.5;
-  --font-size:0.3733rem
+  --font-size:0.3733rem;
+
+  --translate-animation-liner: cubic-bezier(0.75, 0.69, 0.00, 1.00);
 }
 
 html.dark {
@@ -109,6 +111,7 @@ html.dark {
   --brand-color:rgb(var(--color-brand));
   --bg-linear-180:linear-gradient(180deg, #cc10b0, #52247f, #112d6b);
   --bg-linear-90:linear-gradient(90deg, #cc10b0, #52247f, #112d6b)
+  
   
 }
 
