--- a/assets/css/main.less
+++ b/assets/css/main.less
@@ -45,7 +45,7 @@ body {
 	margin: 0;
 	padding: 0;
 	overflow: hidden;
-	transition: all 0.4s cubic-bezier(0.09, 0.83, 0.79, 0.99);
+	transition: all 0.5s var(--translate-animation-liner);
 }
 .wrapper {
 	container-type: inline-size;
