换成自定义滚动条

--- a/assets/css/element.less
+++ b/assets/css/element.less
@@ -412,8 +412,8 @@ body {
 		}
 	}
 
-	.el-scrollbar {
-		.el-scrollbar__wrap {
+	.ScrollBar {
+		.ScrollBar__wrap {
 			overflow-y: scroll;
 		}
 	}
