--- a/assets/css/global.less
+++ b/assets/css/global.less
@@ -70,6 +70,9 @@
 		label {
 			@apply py-2;
 		}
+        label{
+            @apply text-grey;
+        }
 		.el-input {
 			--el-color-primary: rgb(var(--color-brand));
 			.el-input__wrapper {
@@ -78,6 +81,7 @@
 					@apply text-lg;
 					&::placeholder {
 						@apply text-sm;
+
 					}
 				}
 			}
