--- a/assets/css/element.less
+++ b/assets/css/element.less
@@ -468,6 +468,10 @@ body {
 		
 		}
 	}
+
+	.el-loading-mask{
+		background-color: rgb(var(--color-bg-mask) / 0.5);
+	}
 }
 
 @media (max-width: 999px) {
